# star_courier

./: .env.example  README.md  pyproject.toml
star_courier/: __init__.py  __main__.py  alice_init.py  alice_sdk.py  handlers.py
star_courier/data/: commands..json  prologue.json
star_courier/handlers/: __init__.py  echo.py  ping.py  routers.py  start.py
star_courier/utils/: dotenv.py
