[tool.poetry]
name = "star-courier"
version = "0.1.0"
description = "Role-play game in sci-fi genre for Yandex ALice"
authors = ["HeraldOfWar <rusl.babae@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aliceio = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
