[tool.poetry]
name = "star-courier"
version = "0.1.0"
description = "Role-play game in sci-fi genre for Yandex ALice"
authors = ["HeraldOfWar <rusl.babae@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
